--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
         theme: {
           extend: {
             colors: {
-              primary: "#10B981", // Naira Emerald
-              "background-dark": "#0B1120", // Lagos Midnight
-              "background-light": "#f6f8f7",
-              surface: "#1E293B", // Slate Glass base
-              muted: "#94A3B8", // Harmattan Haze
-              "border-dark": "#334155", // Cut glass border
+              primary: "#D4AF37", // Metallic Gold
+              secondary: "#10B981", // Signal Green (for status)
+              "background-dark": "#050505", // Pure Noir
+              "background-light": "#EAEAEA",
+              surface: "#0F0F0F", // Deep Matte
+              muted: "#737373", // Neutral Grey
+              "border-dark": "#262626", // Dark Graphite
             },
             fontFamily: {
               display: ["Playfair Display", "serif"],
@@ -37,12 +38,12 @@
               tech: ["Space Grotesk", "sans-serif"],
             },
             borderRadius: {
-              card: "2px",
+              card: "0px", // Sharper, more premium corners
             },
             backgroundImage: {
               "gradient-radial": "radial-gradient(var(--tw-gradient-stops))",
               "grid-pattern":
-                "url(\"data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2310B981' fill-opacity='0.03' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E\")",
+                "url(\"data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23D4AF37' fill-opacity='0.03' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E\")",
             },
           },
         },
@@ -55,26 +56,26 @@
         height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #0b1120;
+        background: #050505;
       }
       ::-webkit-scrollbar-thumb {
-        background: #334155;
-        border-radius: 3px;
+        background: #262626;
+        border-radius: 0px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #10b981;
+        background: #D4AF37;
       }
 
       /* Glassmorphism utility */
       .glass-panel {
-        background: rgba(30, 41, 59, 0.4);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(51, 65, 85, 0.5);
+        background: rgba(15, 15, 15, 0.6);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        border: 1px solid rgba(212, 175, 55, 0.1); /* Gold tint border */
       }
 
       .text-glow {
-        text-shadow: 0 0 20px rgba(16, 185, 129, 0.15);
+        text-shadow: 0 0 20px rgba(212, 175, 55, 0.3);
       }
 
       .no-scrollbar::-webkit-scrollbar {
